# funasr-task-manager

./: .gitignore  .stignore  AGENTS.md  README.md
3-dev/src/backend/: .env.production.example  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
3-dev/src/backend/alembic/: env.py
3-dev/src/backend/alembic/versions/: 001_initial_schema.py  002_fix_callback_outbox_schema.py  003_add_throughput_rtf.py  004_create_task_segments.py  005_fix_nullable_and_defaults.py  006_add_server_enabled.py  007_add_run_generation.py
3-dev/src/backend/app/: config.py  deps.py  main.py
3-dev/src/backend/app/adapters/: base.py  funasr_ws.py  registry.py  websocket_compat.py
3-dev/src/backend/app/api/: admin.py  alerts.py  files.py  health.py  servers.py  sse.py  stats.py  task_groups.py  tasks.py
3-dev/src/backend/app/auth/: __init__.py  rate_limiter.py  token.py
3-dev/src/backend/app/fault/: __init__.py  circuit_breaker.py  retry.py
3-dev/src/backend/app/models/: __init__.py  base.py  callback_outbox.py  file.py  server.py  task.py  task_event.py  task_segment.py
3-dev/src/backend/app/observability/: logging.py  metrics.py
3-dev/src/backend/app/schemas/: file.py  progress.py  server.py  task.py
3-dev/src/backend/app/services/: audio_preprocessor.py  callback.py  callback_worker.py  cleanup.py  diagnostics.py  heartbeat.py  metadata.py  probe.py  progress.py  result_formatter.py  result_merger.py  scheduler.py  server_benchmark.py  server_probe.py  task_finalizer.py  upload.py  (+2 more)
3-dev/src/backend/cli/: __init__.py  __main__.py  api_client.py  config_store.py  feishu_client.py  main.py  output.py  path_utils.py  progress.py
3-dev/src/backend/config/: servers.yaml  settings.yaml
(+242 files in other folders)
